Added new design.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,27 @@
             <div class="form-container">
                 <fieldset>
                     <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
+                    <input type="date" required placeholder="İsim ve soy isimini yazınız...">
+                </fieldset>
+                <button type="button" class="next-button">Tamam</button>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="form-container">
+                <fieldset>
+                    <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
+                    <label class="upload-file">
+                        <input type="file" required>
+                        <span class="text" data-invalid="Fotoğraf yüklemek için tıklayın." data-valid="Fotoğraf başarıyla yüklendi."></span>
+                    </label>
+                </fieldset>
+                <button type="button" class="next-button">Tamam</button>
+            </div>
+        </div>
+        <div class="swiper-slide">
+            <div class="form-container">
+                <fieldset>
+                    <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
                     <label class="radio">
                         <input type="radio" required name="gender" value="2">
                         <span class="text">
