Added new form items.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
 <body>
 <div class="swiper mySwiper">
     <div class="swiper-wrapper">
-        <div class="swiper-slide">
-            <div class="form-container">
-                <fieldset>
-                    <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
-                    <input type="text" required placeholder="İsim ve soy isimini yazınız...">
-                </fieldset>
-                <button type="button" class="next-button">Tamam</button>
-            </div>
-        </div>
 </div>
 <template id="slide-template">
     <div class="swiper-slide">
@@ -30,8 +21,18 @@
         </div>
     </div>
 </template>
-<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-<script src="main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+    <script src="main.js"></script>
+    <!--<div class="swiper-slide">
+            <div class="form-container">
+                <fieldset>
+                    <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
+                    <input type="date" required placeholder="İsim ve soy isimini yazınız...">
+                </fieldset>
+                <button type="button" class="next-button">Tamam</button>
+            </div>
+        </div>-->
     <!--<div class="swiper-slide">
         <div class="form-container">
             <fieldset>
