--- a/index.html
+++ b/index.html
@@ -7,9 +7,18 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
+
+<div class="loader">
+    <div class="inner">
+        <div class="lds-spinner"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+    </div>
+</div>
+
 <div class="swiper mySwiper">
     <div class="swiper-wrapper">
+    </div>
 </div>
+
 <template id="slide-template">
     <div class="swiper-slide">
         <div class="form-container">
@@ -21,10 +30,10 @@
         </div>
     </div>
 </template>
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
-    <script src="main.js"></script>
-    <!--<div class="swiper-slide">
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://unpkg.com/swiper@7/swiper-bundle.min.js"></script>
+<script src="main.js"></script>
+<!--<div class="swiper-slide">
             <div class="form-container">
                 <fieldset>
                     <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
@@ -33,7 +42,7 @@
                 <button type="button" class="next-button">Tamam</button>
             </div>
         </div>-->
-    <!--<div class="swiper-slide">
+<!--<div class="swiper-slide">
         <div class="form-container">
             <fieldset>
                 <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
@@ -46,7 +55,7 @@
         </div>
     </div>
 -->
-    <!--<div class="swiper-slide">
+<!--<div class="swiper-slide">
         <div class="form-container">
             <fieldset>
                 <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
@@ -69,7 +78,7 @@
         </div>
     </div>
 -->
-    <!--<div class="swiper-slide">
+<!--<div class="swiper-slide">
         <div class="form-container">
             <fieldset>
                 <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
@@ -84,7 +93,7 @@
         </div>
     </div>
 -->
-    <!--<div class="swiper-slide">
+<!--<div class="swiper-slide">
         <div class="form-container">
             <fieldset>
                 <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
@@ -94,7 +103,7 @@
         </div>
     </div>
 -->
-    <!--<div class="swiper-slide">
+<!--<div class="swiper-slide">
         <div class="form-container">
             <fieldset>
                 <legend>Hangi köylümüzü kaydetmek istiyorsunuz?</legend>
@@ -104,6 +113,5 @@
         </div>
     </div>
 -->
-</div>
 </body>
 </html>
